# RealsenseRecord

./: CMakeLists.txt  README.md  helpers.cpp  helpers.h  rs_async_drop_RGBDIMU.cpp  rs_pipeline_group_frame.cpp
ROS/realsense_record_publisher/: CMakeLists.txt  README.md  package.xml
ROS/realsense_record_publisher/include/realsense_record_publisher/: index_reader.h  realsense_record_publisher.h
ROS/realsense_record_publisher/launch/: realsense_record_publisher.launch
ROS/realsense_record_publisher/src/: realsense_record_publisher.cpp
ROS2/: README.md
ROS2/realsense_record_publisher/: CMakeLists.txt  README.md  package.xml
ROS2/realsense_record_publisher/include/realsense_record_publisher/: realsense_record_publisher.h
ROS2/realsense_record_publisher/launch/: realsense_record_publisher_launch.py
ROS2/realsense_record_publisher/src/: realsense_record_publisher.cpp
scripts/postprocess/: assoc_rgbdi.py
scripts/visualization/: playback.py
